[package]
name = "fog"
version = "0.0.1"
authors = ["Scott Teal <scott@teals.org>"]
readme = "README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Future namespace crate for all fog-* projects"
repository = "https://github.com/Cognoscan/fog"
homepage = "https://github.com/Cognoscan/fog"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
